--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -4,24 +4,25 @@ window:
   dimensions:
     columns: 100
     lines: 30
+  opacity: 0.9
 
 # Farbeinstellungen
 colors:
   # Standardfarben
   primary:
-    background: '0x1e1e1e'
+    background: '0x191919'
     foreground: '0xeaeaea'
 
   # ANSI-Farben
   normal:
     black: '0x000000'
     red: '0xff0000'
-    green: '0x00ff00'
+    green: '0x00a000'
     yellow: '0xffff00'
-    blue: '0x0000ff'
+    blue: '0x0066ff'
     magenta: '0xff00ff'
-    cyan: '0x00ffff'
-    white: '0xffffff'
+    cyan: '0x00cfcf'
+    white: '0xfffffa'
 
   # Helle Variante der ANSI-Farben
   bright:
@@ -49,7 +50,7 @@ font:
     family: 'FiraCode Nerd Font'
     style: Bold Italic
 
-  size: 16
+  size: 14
 
 # Weitere Einstellungen
 scrolling:
